--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link href="http://fonts.googleapis.com/css?family=Raleway:200,300,400" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
     <script src="/static/js/jquery-1.9.1.js"></script>
     <script src="/static/js/script.js"></script>
@@ -27,9 +27,9 @@
     </section>
 
     <section id="about">
-        <div class="about-content">
-            <div class="about-title">About Me</div>
-            <div class="about-info">I'm a rising senior at American University excited to build a career in business development. I am passionate about working for organizations that focus on environmental awareness, music and the arts, youth advocacy, and education.<br><br>During my undergraduate studies I've lived in Washington D.C. and London to attend the London School of Economics. My professional experience is in business development so I have a strong background in marketing, fundraising, communications and event planning. My favorite aspect of the administrative positions I've held has been integrating youth education into my position. Whether working in a music store, at a nature conservancy, or Hebrew school, I have always treasured the opportunities I have to work directly with kids who are excited to learn.<br><br>I am eager to apply my skills in community outreach and business development to future opportunities.</div>
+        <div class="section-content">
+            <div class="section-title">About Me</div>
+            <div class="section-info">I'm a rising senior at American University excited to build a career in business development. I am passionate about working for organizations that focus on environmental awareness, music and the arts, youth advocacy, and education.<br><br>During my undergraduate studies I've lived in Washington D.C. and London, where I attended the London School of Economics. My professional experience is in business development so I have a strong background in marketing, fundraising, communications and event planning. In my administrative work, I am most excited when I am able to integrate youth education. Whether working in a music store, at a nature conservancy or a Hebrew school, I have always treasured the opportunities to work directly with kids who want to learn.<br><br>I am eager to apply my skills in community outreach and business development.</div>
         </div>
     </section>
 </body>
