--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
     <script src="/static/js/jquery-1.9.1.js"></script>
     <script src="/static/js/script.js"></script>
-    <title>Sarah Diamond | Adventures of an Artist</title>
+    <title>Sarah Diamond | Curiosity is the Mother of Invention</title>
 </head>
 <body>
 
@@ -13,7 +13,7 @@
         <a href="#"><div class="navbar-item left navbar-logo"><img src="/static/images/diamond.png" class="img-scaled"></div></a>
         <a href="#about"><div class="navbar-item left">About</div></a>
         <a href="#experience"><div class="navbar-item left">Experience</div></a>
-        <div class="navbar-item left">Contact</div>
+        <a href="#contact"><div class="navbar-item left">Contact</div></a>
         <div class="navbar-item right">Blog</div>
     </div>
 
@@ -23,7 +23,7 @@
             <div class="hero-title">
                 Sarah Diamond
             </div>
-            <div class="hero-subtitle">The Number One Heart Surgeon in the U.S.</div>
+            <div class="hero-subtitle">Wired for Occasional Situational Humor and Parallel Circuits</div>
         </div>
     </section>
 
@@ -118,6 +118,35 @@
                     
             </div>
         </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <div class="contact-section-title">
+            <div class="contact-title-overlay"></div>
+            <div class="contact-title-background"></div>
+            <div class="contact-title-content">Contact</div>
+        </div>
+        <div class="container contact-container">
+            <form action="https://formspree.io/sarahbianta@gmail.com"
+                  method="POST">
+                <input type="text" name="name" placeholder="Name" required>
+                <br>
+                <input type="email" name="_replyto" placeholder="you@email.com" required>
+                <br>
+                <textarea name="message" rows="5" placeholder="Let's talk!" required></textarea>
+                <br>
+                <input type="submit" value="Send" class="btn btn-success">
+            </form>
+        </div>
+    </section>
+
+    <section class="footer">
+        <div class="footer-container">
+            <a href="mailto:sarahbianta@gmail.com"><div class="footer-item"><img src="/static/images/email.png" class="img-scaled"></div></a>
+            <a href="https://www.linkedin.com/in/diamondsarah"><div class="footer-item"><img src="/static/images/linkedin.png" class="img-scaled"></div></a>
+
+        </div>
+        <div class="copyright"></div>
     </section>
 </body>
 </html>
