--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#about"><div class="navbar-item left">About</div></a>
         <a href="#experience"><div class="navbar-item left">Experience</div></a>
         <a href="#contact"><div class="navbar-item left">Contact</div></a>
-        <div class="navbar-item right">Blog</div>
+        <a href="http://sarahdiamond.blogspot.com"><div class="navbar-item right">Blog</div></a>
     </div>
 
     <section id="cover" class="hero">
