--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
                 <div class="col-md-4 col-centered">
                     <div class="experience-image">
-                        <img src="/static/images/tregaron.jpg" class="img-scaled img-circle">
+                        <img src="/static/images/tregaron.jpeg" class="img-scaled img-circle">
                     </div>
                 </div>
                     
@@ -104,7 +104,7 @@
                 <div class="col-md-4 col-centered nonvisible">Blank</div>
                 <div class="col-md-4 col-centered">
                     <div class="experience-image">
-                        <img src="/static/images/tedx-white.png" class="img-scaled img-circle">
+                        <img src="/static/images/tedx.png" class="img-scaled img-circle">
                     </div>
                 </div>
                 <div class="experience-text col-md-4 col-centered">
